--- a/src/templates/partials/checks-tab.hbs
+++ b/src/templates/partials/checks-tab.hbs
@@ -2,7 +2,7 @@
     <p>
         Crafting checks are performed when there is a chance of failure in the crafting process.
         The difficulty of crafting checks can be modified by things such as the skills of the crafter,
-        the challenge level of the recipe, the components used and more.
+        the challenge level of the recipe, the componentIds used and more.
     </p>
     <p>If your crafting system does not have a chance of failure, you don't need to enable crafting checks.</p>
     <hr/>
