--- a/src/templates/partials/readonly-crafting-system.hbs
+++ b/src/templates/partials/readonly-crafting-system.hbs
@@ -1,5 +1,6 @@
 <header class="fabricate-crafting-system-header">
     <h1>{{system.name}}</h1>
+    <h4>{{system.author}}</h4>
     <h4>{{system.summary}}</h4>
     <hr/>
     <p>{{system.description}}</p>
