--- a/src/templates/partials/recipes-tab.hbs
+++ b/src/templates/partials/recipes-tab.hbs
@@ -1,6 +1,6 @@
 <div class="fabricate-recipes">
     <p>
-        Recipes provide characters with the ability to repeatedly craft components.
+        Recipes provide characters with the ability to repeatedly craft componentIds.
     </p>
     <div class="fabricate-drop-zone" data-drop-trigger="createRecipe">
         <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item here to create a recipe
