--- a/src/templates/edit-crafting-system-detail.hbs
+++ b/src/templates/edit-crafting-system-detail.hbs
@@ -8,6 +8,13 @@
     </div>
 
     <div class="form-group">
+        <label for="author">{{localize "fabricate.EditCraftingSystemDetailDialog.author.label"}}</label>
+        <div class="form-fields">
+            <input type="text" name="author" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.author.placeholder"}}" value="{{author}}" autofocus="">
+        </div>
+    </div>
+
+    <div class="form-group">
         <label for="summary">{{localize "fabricate.EditCraftingSystemDetailDialog.summary.label"}}</label>
         <div class="form-fields">
             <textarea name="summary" rows="3" cols="50" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.summary.placeholder"}}">{{summary}}</textarea>
