--- a/src/templates/essence-manager.hbs
+++ b/src/templates/essence-manager.hbs
@@ -1,3 +1,29 @@
 <div class="fabricate-essence-manager">
-    Essence manager
+    <form>
+        <div class="form-group">
+            <label for="name">{{localize "fabricate.EditEssenceDialog.name.label"}}</label>
+            <div class="form-fields">
+                <input type="text" name="name" placeholder="{{localize "fabricate.EditEssenceDialog.name.placeholder"}}" value="{{name}}" autofocus="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="description">{{localize "fabricate.EditEssenceDialog.description.label"}}</label>
+            <div class="form-fields">
+                <input type="text" name="description" placeholder="{{localize "fabricate.EditEssenceDialog.description.placeholder"}}" value="{{description}}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="iconCode">{{localize "fabricate.EditEssenceDialog.iconCode.label"}}</label>
+            <div class="form-fields">
+                <input type="text" name="iconCode" placeholder="{{localize "fabricate.EditEssenceDialog.iconCode.placeholder"}}" value="{{iconCode}}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="tooltip">{{localize "fabricate.EditEssenceDialog.tooltip.label"}}</label>
+            <div class="form-fields">
+                <input type="text" name="tooltip" placeholder="{{localize "fabricate.EditEssenceDialog.tooltip.placeholder"}}" value="{{tooltip}}">
+            </div>
+        </div>
+        <button type="submit"><i class="fa-regular fa-circle-check"></i> {{localize "fabricate.EditEssenceDialog.submit"}}</button>
+    </form>
 </div>
