- changes to UI for create and edit essences for a system

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -250,7 +250,7 @@
         text-align: center;
       }
 
-      .fabricate-inline-component-list {
+      .fabricate-inline-component-list, .fabricate-component-list {
         margin-top: 10px;
         justify-content: center;
       }
@@ -267,7 +267,6 @@
       }
 
       .fabricate-edit-item {
-        margin-top: 12px;
         display: flex;
         justify-content: right;
 
