--- a/src/templates/partials/recipes-tab.hbs
+++ b/src/templates/partials/recipes-tab.hbs
@@ -26,7 +26,7 @@
                 Recipe name
             </td>
             <td>
-                <div class="fabricate-inline-component-list">
+                <div class="fabricate-component-list">
                     <div class="fabricate-component" data-tooltip="Component Name">
                         <img src="/icons/commodities/materials/bowl-liquid-red.webp">
                         <div class="fabricate-info">
@@ -48,7 +48,7 @@
                 </div>
             </td>
             <td>
-                <div class="fabricate-inline-component-list">
+                <div class="fabricate-component-list">
                     <div class="fabricate-component" data-tooltip="Component Name">
                         <img src="/icons/commodities/materials/bowl-liquid-red.webp">
                         <div class="fabricate-info">
@@ -70,7 +70,7 @@
                 </div>
             </td>
             <td>
-                <div class="fabricate-inline-component-list">
+                <div class="fabricate-component-list">
                     <div class="fabricate-component" data-tooltip="Component Name">
                         <img src="/icons/commodities/materials/bowl-liquid-red.webp">
                         <div class="fabricate-info">
@@ -107,14 +107,16 @@
                     </span>
                 </div>
             </td>
-            <td class="fabricate-edit-item">
-                <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
-                    <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                </button>
-                <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id"
-                        data-tooltip="Delete recipe">
-                    <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                </button>
+            <td>
+                <div class="fabricate-edit-item">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                        <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
+                    </button>
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id"
+                            data-tooltip="Delete recipe">
+                        <i class="fa-solid fa-trash" style="pointer-events: none"></i>
+                    </button>
+                </div>
             </td>
         </tr>
         </tbody>
