- adds component import

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -253,6 +253,10 @@
       .fabricate-inline-component-list, .fabricate-component-list {
         margin-top: 10px;
         justify-content: center;
+
+        .fabricate-no-salvage {
+          margin-top: -10px;
+        }
       }
 
       .fabricate-item-image {
