--- a/src/templates/partials/components-tab.hbs
+++ b/src/templates/partials/components-tab.hbs
@@ -16,62 +16,56 @@
             </tr>
         </thead>
         <tbody class="fabricate-item-table-body">
-            <tr class="fabricate-item-table-row">
-                <td class="fabricate-item-image">
-                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                </td>
-                <td class="fabricate-item-name">
-                    Component name
-                </td>
-                <td>
-                    <div class="fabricate-essence-list">
-                        <span class="fabricate-essence-preview">
-                            <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
-                        </span>
-                        <span class="fabricate-essence-preview">
-                            2 <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
-                        </span>
-                        <span class="fabricate-essence-preview">
-                            <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
-                        </span>
-                        <span class="fabricate-essence-preview">
-                            3 <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
-                        </span>
-                    </div>
-                </td>
-                <td>
-                    <div class="fabricate-inline-component-list">
-                        <div class="fabricate-component" data-tooltip="Component Name">
-                            <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                            <div class="fabricate-info">
-                                <span class="fabricate-detail">3</span>
-                            </div>
+            {{#each system.components}}
+                <tr class="fabricate-item-table-row">
+                    <td class="fabricate-item-image">
+                        <img src="{{imageUrl}}">
+                    </td>
+                    <td class="fabricate-item-name">
+                        {{name}}
+                    </td>
+                    <td>
+                        <div class="fabricate-essence-list">
+                            {{#each essences.units}}
+                                <span class="fabricate-essence-preview">
+                                    {{quantity}} <i class="{{part.iconCode}}" data-tooltip="{{part.tooltip}}"></i>
+                                </span>
+                            {{else}}
+                                <span class="fabricate-essence-preview">
+                                    <!-- todo: localize -->
+                                    <i class="fa-solid fa-ellipsis" data-tooltip="No essences"></i>
+                                </span>
+                            {{/each}}
                         </div>
-                        <div class="fabricate-component" data-tooltip="Component Name">
-                            <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                            <div class="fabricate-info">
-                                <span class="fabricate-detail">3</span>
-                            </div>
+                    </td>
+                    <td>
+                        <div class="fabricate-inline-component-list">
+                            {{#each salvage.units}}
+                                <div class="fabricate-component" data-tooltip="{{id}}">
+                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
+                                    <div class="fabricate-info">
+                                        <span class="fabricate-detail">{{quantity}}</span>
+                                    </div>
+                                </div>
+                            {{else}}
+                                <span class="fabricate-no-salvage">
+                                    <i class="fa-solid fa-ellipsis" data-tooltip="No salvage"></i>
+                                </span>
+                            {{/each}}
                         </div>
-                        <div class="fabricate-component" data-tooltip="Component Name">
-                            <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                            <div class="fabricate-info">
-                                <span class="fabricate-detail">3</span>
-                            </div>
+                    </td>
+                    <td>
+                        <div class="fabricate-edit-item">
+                            <button type="button" data-action="editComponent" data-part-id="part-id" data-tooltip="Edit component">
+                                <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
+                            </button>
+                            <button type="button" data-action="removeComponent" data-part-id="part-id" data-tooltip="Remove component">
+                                <i class="fa-solid fa-trash" style="pointer-events: none"></i>
+                            </button>
                         </div>
-                    </div>
-                </td>
-                <td>
-                    <div class="fabricate-edit-item">
-                        <button type="button" data-action="editComponent" data-part-id="part-id" data-tooltip="Edit component">
-                            <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                        </button>
-                        <button type="button" data-action="removeComponent" data-part-id="part-id" data-tooltip="Remove component">
-                            <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                        </button>
-                    </div>
-                </td>
-            </tr>
+                    </td>
+                </tr>
+            {{/each}}
         </tbody>
     </table>
 </div>
