--- a/src/templates/partials/components-tab.hbs
+++ b/src/templates/partials/components-tab.hbs
@@ -56,10 +56,10 @@
                     </td>
                     <td>
                         <div class="fabricate-edit-item">
-                            <button type="button" data-action="editComponent" data-part-id="part-id" data-tooltip="Edit component">
+                            <button type="button" data-action="editComponent" data-component-id="{{id}}" data-tooltip="Edit component">
                                 <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                             </button>
-                            <button type="button" data-action="removeComponent" data-part-id="part-id" data-tooltip="Remove component">
+                            <button type="button" data-action="removeComponent" data-component-id="{{id}}" data-tooltip="Remove component">
                                 <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                             </button>
                         </div>
