--- a/src/templates/edit-component-dialog.hbs
+++ b/src/templates/edit-component-dialog.hbs
@@ -1,18 +1,37 @@
 <div class="fabricate-component-manager">
+
     <h2 class="fabricate-component-name">{{component.name}}</h2>
-    <div class="flexcol">
-        <div class="fabricate-component-preview flexrow">
-            <img class="fabricate-component-img" src="{{component.imageUrl}}" />
-            <div class="fabricate-component-essence-editor">
+
+        <div class="fabricate-component-image">
+            <img src="{{component.imageUrl}}" />
+        </div>
+
+        <div class="fabricate-component-essence-editor">
+            <h3>Essences</h3>
+            <p>The component is imbued with these essences. Left click on an essence to increase its potency. Shift click while doing so to decrease it.</p>
+            <div class="fabricate-inline-part-list">
                 {{#each component.essences}}
-                    <span>{{essence.name}} {{amount}}</span>
+                    <div class="fabricate-essence" data-tooltip="{{essence.tooltip}}" data-essence-id="{{essence.id}}" data-component-id="{{../component.id}}" data-action="editComponentEssence">
+                        <span>{{amount}} <i class="{{essence.iconCode}}"></i> {{essence.name}}</span>
+                    </div>
                 {{/each}}
             </div>
         </div>
+
+
         <div class="fabricate-component-salvage-editor">
-            {{#each component.salvage}}
-                <span>{{component.name}} {{amount}}</span>
-            {{/each}}
+            <h3>Salvage</h3>
+            <p>These components will be reclaimed when the item is salvaged. Left click on a component to increase its salvage value. Shift click while doing so to decrease it.</p>
+            <div class="fabricate-component-list">
+                {{#each component.salvage}}
+                    <div class="fabricate-component fabricate-component-salvage-choice" data-salvage-id="{{component.id}}" data-tooltip="{{component.name}}" data-component-id="{{../component.id}}" data-action="editComponentSalvage">
+                        <img src="{{component.imageUrl}}">
+                        <div class="fabricate-info">
+                            <span class="fabricate-detail">{{amount}}</span>
+                        </div>
+                    </div>
+                {{/each}}
+            </div>
         </div>
-    </div>
+
 </div>
