feat: Recipe Creation
- Partial change
- Makes recipe ingredient selection between groups, not components in groups

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -296,6 +296,8 @@
 
   aside {
     padding: 0 3px;
+    background: #3c3b39;
+    border-radius: 5px;
   }
 
   .fabricate-crafting-system-editor {
