--- a/src/templates/edit-crafting-system-detail.hbs
+++ b/src/templates/edit-crafting-system-detail.hbs
@@ -3,28 +3,28 @@
     <div class="form-group">
         <label for="name">{{localize "fabricate.EditCraftingSystemDetailDialog.name.label"}}</label>
         <div class="form-fields">
-            <input type="text" name="name" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.name.placeholder"}}" value="{{name}}" autofocus="">
+            <input type="text" name="name" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.name.placeholder"}}" value="{{details.name}}" autofocus="">
         </div>
     </div>
 
     <div class="form-group">
         <label for="author">{{localize "fabricate.EditCraftingSystemDetailDialog.author.label"}}</label>
         <div class="form-fields">
-            <input type="text" name="author" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.author.placeholder"}}" value="{{author}}" autofocus="">
+            <input type="text" name="author" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.author.placeholder"}}" value="{{details.author}}" autofocus="">
         </div>
     </div>
 
     <div class="form-group">
         <label for="summary">{{localize "fabricate.EditCraftingSystemDetailDialog.summary.label"}}</label>
         <div class="form-fields">
-            <textarea name="summary" rows="3" cols="50" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.summary.placeholder"}}">{{summary}}</textarea>
+            <textarea name="summary" rows="3" cols="50" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.summary.placeholder"}}">{{details.summary}}</textarea>
         </div>
     </div>
 
     <div class="form-group">
         <label for="description">{{localize "fabricate.EditCraftingSystemDetailDialog.description.label"}}</label>
         <div class="form-fields">
-            <textarea name="description" rows="10" cols="50" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.description.placeholder"}}">{{description}}</textarea>
+            <textarea name="description" rows="10" cols="50" placeholder="{{localize "fabricate.EditCraftingSystemDetailDialog.description.placeholder"}}">{{details.description}}</textarea>
         </div>
     </div>
 
