--- a/src/templates/recipe-manager.hbs
+++ b/src/templates/recipe-manager.hbs
@@ -7,12 +7,8 @@
         </div>
 
         <div class="fabricate-recipe-essence-editor">
-            <h3>Essences</h3>
-            <p>
-                The recipe requires these essences in addition to any named ingredients and catalysts.
-                Left click on an essence to increase the required amount.
-                Shift click while doing so to decrease it.
-            </p>
+            <h3>{{localize "fabricate.RecipeManagerApp.essences.title"}}</h3>
+            <p>{{localize "fabricate.RecipeManagerApp.essences.instructions"}}</p>
             <div class="fabricate-inline-part-list">
                 {{#each recipe.essences}}
                     <div class="fabricate-essence" data-tooltip="{{essence.tooltip}}" data-essence-id="{{essence.id}}" data-recipe-id="{{../recipe.id}}" data-action="editRecipeEssence">
@@ -23,14 +19,8 @@
         </div>
 
         <div class="fabricate-recipe-ingredients-editor">
-            <h3>Ingredients</h3>
-            <p>
-                The recipe requires these ingredients in addition to any essences and catalysts.
-                A recipe can have more than one combination of ingredients to choose from.
-                Left click on a component to increase the required number in each option.
-                Shift click while doing so to decrease it.
-                Drop an item onto an empty ingredient combination option to create a new one.
-            </p>
+            <h3>{{localize "fabricate.RecipeManagerApp.ingredients.title"}}</h3>
+            <p>{{localize "fabricate.RecipeManagerApp.ingredients.instructions"}}</p>
             <div class="fabricate-recipe-ingredient-options">
                 {{#each recipe.ingredientOptions.members}}
                     <div class="fabricate-component-list">
@@ -51,14 +41,8 @@
         </div>
 
     <div class="fabricate-recipe-results-editor">
-        <h3>Results</h3>
-        <p>
-            The recipe produces these components when successfully crafted.
-            A recipe can have more than one combination of results to choose from.
-            Left click on a component to increase the number produced in each option.
-            Shift click while doing so to decrease it.
-            Drop an item onto an empty result combination option to create a new one.
-        </p>
+        <h3>{{localize "fabricate.RecipeManagerApp.results.title"}}</h3>
+        <p>{{localize "fabricate.RecipeManagerApp.results.instructions"}}</p>
         <div class="fabricate-recipe-result-options">
             {{#each recipe.resultOptions.members}}
                 <div class="fabricate-component-list">
