--- a/src/templates/partials/components-tab.hbs
+++ b/src/templates/partials/components-tab.hbs
@@ -26,7 +26,7 @@
                     </td>
                     <td>
                         <div class="fabricate-essence-list">
-                            {{#each essences}}
+                            {{#each essences.units}}
                                 <span class="fabricate-essence-preview">
                                     {{quantity}} <i class="{{part.iconCode}}" data-tooltip="{{part.tooltip}}"></i>
                                 </span>
@@ -40,7 +40,7 @@
                     </td>
                     <td>
                         <div class="fabricate-inline-part-list">
-                            {{#each salvage}}
+                            {{#each salvage.units}}
                                 <div class="fabricate-component" data-tooltip="{{part.name}}">
                                     <img src="{{part.imageUrl}}">
                                     <div class="fabricate-info">
